src/antlr/WaccParser.java
// Generated from ./WaccParser.g4 by ANTLR 4.9.1
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WaccParser extends Parser {

	static {
		RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	public static final int
			BEGIN = 1, END = 2, IS = 3, SKIP_TOKEN = 4, READ = 5, FREE = 6, RETURN = 7, EXIT = 8,
			PRINT = 9, PRINTLN = 10, IF = 11, THEN = 12, ELSE = 13, FI = 14, WHILE = 15, DO = 16,
			DONE = 17, NULL = 18, STRUCT = 19, DOT = 20, IMPORT = 21, ASSIGN = 22, SEMICOLON = 23,
			COMMA = 24, NEWPAIR = 25, CALL = 26, FST = 27, SND = 28, PAIR = 29, TRUE = 30, FALSE = 31,
			INT = 32, BOOL = 33, CHAR = 34, STRING = 35, VAR = 36, NOT = 37, LEN = 38, ORD = 39, CHR = 40,
			REF = 41, PLUS = 42, MINUS = 43, MULT = 44, DIV = 45, MOD = 46, GTE = 47, GT = 48, LTE = 49,
			LT = 50, EQ = 51, NEQ = 52, AND = 53, OR = 54, L_PAREN = 55, R_PAREN = 56, L_SQUARE = 57,
			R_SQUARE = 58, L_CURLY = 59, R_CURLY = 60, NUMBER = 61, CAPTIALISED_IDENT = 62,
			IDENT = 63, WHITESPACE = 64, ESCAPE_CHARACTER = 65, CHARACTER = 66, STR_LITER = 67,
			CHAR_LITER = 68, COMMENT = 69;
	public static final int
			RULE_program = 0, RULE_func = 1, RULE_paramList = 2, RULE_param = 3, RULE_stat = 4,
			RULE_assignLhs = 5, RULE_assignRhs = 6, RULE_importStat = 7, RULE_structDeclare = 8,
			RULE_structAssign = 9, RULE_structMember = 10, RULE_structAccess = 11,
			RULE_argList = 12, RULE_pairElem = 13, RULE_pointerElem = 14, RULE_type = 15,
			RULE_baseType = 16, RULE_arrayType = 17, RULE_pairType = 18, RULE_pairElemType = 19,
			RULE_pointerType = 20, RULE_implicitType = 21, RULE_structType = 22, RULE_expr = 23,
			RULE_unop = 24, RULE_binop1 = 25, RULE_binop2 = 26, RULE_binop3 = 27,
			RULE_binop4 = 28, RULE_binop5 = 29, RULE_binop6 = 30, RULE_arrayElem = 31,
			RULE_intLiter = 32, RULE_boolLiter = 33, RULE_strLiter = 34, RULE_charLiter = 35,
			RULE_arrayLiter = 36, RULE_pairLiter = 37, RULE_ident = 38, RULE_capitalisedIdent = 39;

	private static String[] makeRuleNames() {
		return new String[]{
				"program", "func", "paramList", "param", "stat", "assignLhs", "assignRhs",
				"importStat", "structDeclare", "structAssign", "structMember", "structAccess",
				"argList", "pairElem", "pointerElem", "type", "baseType", "arrayType",
				"pairType", "pairElemType", "pointerType", "implicitType", "structType",
				"expr", "unop", "binop1", "binop2", "binop3", "binop4", "binop5", "binop6",
				"arrayElem", "intLiter", "boolLiter", "strLiter", "charLiter", "arrayLiter",
				"pairLiter", "ident", "capitalisedIdent"
		};
	}

	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[]{
				null, "'begin'", "'end'", "'is'", "'skip'", "'read'", "'free'", "'return'",
				"'exit'", "'print'", "'println'", "'if'", "'then'", "'else'", "'fi'",
				"'while'", "'do'", "'done'", "'null'", "'struct'", "'.'", "'import'",
				"'='", "';'", "','", "'newpair'", "'call'", "'fst'", "'snd'", "'pair'",
				"'true'", "'false'", "'int'", "'bool'", "'char'", "'string'", "'var'",
				"'!'", "'len'", "'ord'", "'chr'", "'&'", "'+'", "'-'", "'*'", "'/'",
				"'%'", "'>='", "'>'", "'<='", "'<'", "'=='", "'!='", "'&&'", "'||'",
				"'('", "')'", "'['", "']'", "'{'", "'}'"
		};
	}

	private static final String[] _LITERAL_NAMES = makeLiteralNames();

	private static String[] makeSymbolicNames() {
		return new String[]{
				null, "BEGIN", "END", "IS", "SKIP_TOKEN", "READ", "FREE", "RETURN", "EXIT",
				"PRINT", "PRINTLN", "IF", "THEN", "ELSE", "FI", "WHILE", "DO", "DONE",
				"NULL", "STRUCT", "DOT", "IMPORT", "ASSIGN", "SEMICOLON", "COMMA", "NEWPAIR",
				"CALL", "FST", "SND", "PAIR", "TRUE", "FALSE", "INT", "BOOL", "CHAR",
				"STRING", "VAR", "NOT", "LEN", "ORD", "CHR", "REF", "PLUS", "MINUS",
				"MULT", "DIV", "MOD", "GTE", "GT", "LTE", "LT", "EQ", "NEQ", "AND", "OR",
				"L_PAREN", "R_PAREN", "L_SQUARE", "R_SQUARE", "L_CURLY", "R_CURLY", "NUMBER",
				"CAPTIALISED_IDENT", "IDENT", "WHITESPACE", "ESCAPE_CHARACTER", "CHARACTER",
				"STR_LITER", "CHAR_LITER", "COMMENT"
		};
	}

	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;

	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "WaccParser.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public WaccParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {

		public TerminalNode BEGIN() {
			return getToken(WaccParser.BEGIN, 0);
		}

		public StatContext stat() {
			return getRuleContext(StatContext.class, 0);
		}

		public TerminalNode END() {
			return getToken(WaccParser.END, 0);
		}

		public TerminalNode EOF() {
			return getToken(WaccParser.EOF, 0);
		}

		public List<ImportStatContext> importStat() {
			return getRuleContexts(ImportStatContext.class);
		}

		public ImportStatContext importStat(int i) {
			return getRuleContext(ImportStatContext.class, i);
		}

		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}

		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class, i);
		}

		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_program;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof WaccParserVisitor) {
				return ((WaccParserVisitor<? extends T>) visitor).visitProgram(this);
			} else {
				return visitor.visitChildren(this);
			}
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == IMPORT) {
					{
						{
							setState(80);
							importStat();
						}
					}
					setState(85);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(86);
				match(BEGIN);
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							{
								setState(87);
								func();
							}
						}
					}
					setState(92);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
				}
				setState(93);
				stat(0);
				setState(94);
				match(END);
				setState(95);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {

		public TypeContext type() {
			return getRuleContext(TypeContext.class, 0);
		}

		public IdentContext ident() {
			return getRuleContext(IdentContext.class, 0);
		}

		public TerminalNode L_PAREN() {
			return getToken(WaccParser.L_PAREN, 0);
		}

		public TerminalNode R_PAREN() {
			return getToken(WaccParser.R_PAREN, 0);
		}
		public TerminalNode IS() { return getToken(WaccParser.IS, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode END() { return getToken(WaccParser.END, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(97);
				type();
				setState(98);
				ident();
				setState(99);
				match(L_PAREN);
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 &&
						((1L << _la) & ((1L << STRUCT) | (1L << PAIR) | (1L << INT) | (1L << BOOL) | (1L
								<< CHAR) | (1L << STRING) | (1L << L_PAREN))) != 0)) {
					{
						setState(100);
						paramList();
					}
				}

				setState(103);
				match(R_PAREN);
				setState(104);
				match(IS);
				setState(105);
				stat(0);
				setState(106);
				match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamListContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(WaccParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(WaccParser.COMMA, i);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitParamList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_paramList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(108);
				param();
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == COMMA) {
					{
						{
							setState(109);
							match(COMMA);
							setState(110);
							param();
						}
					}
					setState(115);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(116);
				type();
				setState(117);
				ident();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {

		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_stat;
		}

		public StatContext() {
		}

		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}

	public static class ReadStatContext extends StatContext {

		public TerminalNode READ() {
			return getToken(WaccParser.READ, 0);
		}

		public AssignLhsContext assignLhs() {
			return getRuleContext(AssignLhsContext.class, 0);
		}

		public ReadStatContext(StatContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof WaccParserVisitor) {
				return ((WaccParserVisitor<? extends T>) visitor).visitReadStat(this);
			} else {
				return visitor.visitChildren(this);
			}
		}
	}

	public static class IfStatContext extends StatContext {

		public TerminalNode IF() {
			return getToken(WaccParser.IF, 0);
		}

		public ExprContext expr() {
			return getRuleContext(ExprContext.class, 0);
		}

		public TerminalNode THEN() {
			return getToken(WaccParser.THEN, 0);
		}

		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}

		public StatContext stat(int i) {
			return getRuleContext(StatContext.class, i);
		}

		public TerminalNode ELSE() {
			return getToken(WaccParser.ELSE, 0);
		}

		public TerminalNode FI() {
			return getToken(WaccParser.FI, 0);
		}

		public IfStatContext(StatContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof WaccParserVisitor) {
				return ((WaccParserVisitor<? extends T>) visitor).visitIfStat(this);
			} else {
				return visitor.visitChildren(this);
			}
		}
	}

	public static class BlockStatContext extends StatContext {

		public TerminalNode BEGIN() {
			return getToken(WaccParser.BEGIN, 0);
		}

		public StatContext stat() {
			return getRuleContext(StatContext.class, 0);
		}

		public TerminalNode END() {
			return getToken(WaccParser.END, 0);
		}

		public BlockStatContext(StatContext ctx) {
			copyFrom(ctx);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitBlockStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MultiStatContext extends StatContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(WaccParser.SEMICOLON, 0); }
		public MultiStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitMultiStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SkipStatContext extends StatContext {
		public TerminalNode SKIP_TOKEN() { return getToken(WaccParser.SKIP_TOKEN, 0); }
		public SkipStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitSkipStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StructDeclareStatContext extends StatContext {
		public StructDeclareContext structDeclare() {
			return getRuleContext(StructDeclareContext.class,0);
		}
		public StructDeclareStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitStructDeclareStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ActionStatContext extends StatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode FREE() { return getToken(WaccParser.FREE, 0); }
		public TerminalNode RETURN() { return getToken(WaccParser.RETURN, 0); }
		public TerminalNode EXIT() { return getToken(WaccParser.EXIT, 0); }
		public TerminalNode PRINT() { return getToken(WaccParser.PRINT, 0); }
		public TerminalNode PRINTLN() { return getToken(WaccParser.PRINTLN, 0); }
		public ActionStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitActionStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignStatContext extends StatContext {
		public AssignLhsContext assignLhs() {
			return getRuleContext(AssignLhsContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(WaccParser.ASSIGN, 0); }
		public AssignRhsContext assignRhs() {
			return getRuleContext(AssignRhsContext.class,0);
		}
		public AssignStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitAssignStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclareStatContext extends StatContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(WaccParser.ASSIGN, 0); }
		public AssignRhsContext assignRhs() {
			return getRuleContext(AssignRhsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ImplicitTypeContext implicitType() {
			return getRuleContext(ImplicitTypeContext.class,0);
		}
		public DeclareStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitDeclareStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileStatContext extends StatContext {
		public TerminalNode WHILE() { return getToken(WaccParser.WHILE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode DO() { return getToken(WaccParser.DO, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode DONE() { return getToken(WaccParser.DONE, 0); }
		public WhileStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitWhileStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		return stat(0);
	}

	private StatContext stat(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StatContext _localctx = new StatContext(_ctx, _parentState);
		StatContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_stat, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(156);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
					case 1: {
						_localctx = new SkipStatContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;

						setState(120);
						match(SKIP_TOKEN);
					}
					break;
					case 2: {
						_localctx = new DeclareStatContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(123);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
							case STRUCT:
							case PAIR:
							case INT:
							case BOOL:
							case CHAR:
							case STRING:
							case L_PAREN: {
								setState(121);
								type();
							}
							break;
							case VAR: {
								setState(122);
								implicitType();
							}
							break;
							default:
								throw new NoViableAltException(this);
						}
						setState(125);
						ident();
						setState(126);
						match(ASSIGN);
						setState(127);
						assignRhs();
					}
					break;
					case 3: {
						_localctx = new AssignStatContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(129);
						assignLhs();
						setState(130);
						match(ASSIGN);
						setState(131);
						assignRhs();
					}
					break;
					case 4: {
						_localctx = new StructDeclareStatContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(133);
						structDeclare();
					}
					break;
					case 5: {
						_localctx = new ReadStatContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(134);
						match(READ);
						setState(135);
						assignLhs();
					}
					break;
					case 6: {
						_localctx = new ActionStatContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(136);
						_la = _input.LA(1);
						if (!((((_la) & ~0x3f) == 0 &&
								((1L << _la) & ((1L << FREE) | (1L << RETURN) | (1L << EXIT) | (1L << PRINT) | (1L
										<< PRINTLN))) != 0))) {
							_errHandler.recoverInline(this);
						} else {
							if (_input.LA(1) == Token.EOF) {
								matchedEOF = true;
							}
							_errHandler.reportMatch(this);
							consume();
						}
						setState(137);
						expr(0);
					}
					break;
					case 7: {
						_localctx = new IfStatContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(138);
						match(IF);
						setState(139);
						expr(0);
						setState(140);
						match(THEN);
						setState(141);
						stat(0);
						setState(142);
						match(ELSE);
						setState(143);
						stat(0);
						setState(144);
						match(FI);
					}
					break;
					case 8: {
						_localctx = new WhileStatContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(146);
						match(WHILE);
						setState(147);
						expr(0);
						setState(148);
						match(DO);
						setState(149);
						stat(0);
						setState(150);
						match(DONE);
					}
					break;
					case 9: {
						_localctx = new BlockStatContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(152);
						match(BEGIN);
						setState(153);
						stat(0);
						setState(154);
						match(END);
					}
					break;
				}
				_ctx.stop = _input.LT(-1);
				setState(163);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 6, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						if (_parseListeners != null) {
							triggerExitRuleEvent();
						}
						_prevctx = _localctx;
						{
							{
								_localctx = new MultiStatContext(new StatContext(_parentctx, _parentState));
								pushNewRecursionContext(_localctx, _startState, RULE_stat);
								setState(158);
								if (!(precpred(_ctx, 1))) {
									throw new FailedPredicateException(this, "precpred(_ctx, 1)");
								}
								setState(159);
								match(SEMICOLON);
								setState(160);
								stat(2);
							}
						}
					}
					setState(165);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 6, _ctx);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AssignLhsContext extends ParserRuleContext {

		public IdentContext ident() {
			return getRuleContext(IdentContext.class, 0);
		}

		public ArrayElemContext arrayElem() {
			return getRuleContext(ArrayElemContext.class, 0);
		}

		public PairElemContext pairElem() {
			return getRuleContext(PairElemContext.class, 0);
		}

		public PointerElemContext pointerElem() {
			return getRuleContext(PointerElemContext.class, 0);
		}

		public StructAccessContext structAccess() {
			return getRuleContext(StructAccessContext.class, 0);
		}

		public AssignLhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_assignLhs;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof WaccParserVisitor) {
				return ((WaccParserVisitor<? extends T>) visitor).visitAssignLhs(this);
			} else {
				return visitor.visitChildren(this);
			}
		}
	}

	public final AssignLhsContext assignLhs() throws RecognitionException {
		AssignLhsContext _localctx = new AssignLhsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignLhs);
		try {
			setState(171);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
				case 1:
					enterOuterAlt(_localctx, 1);
				{
					setState(166);
					ident();
				}
				break;
				case 2:
					enterOuterAlt(_localctx, 2);
				{
					setState(167);
					arrayElem();
				}
				break;
				case 3:
					enterOuterAlt(_localctx, 3);
				{
					setState(168);
					pairElem();
				}
				break;
				case 4:
					enterOuterAlt(_localctx, 4);
				{
					setState(169);
					pointerElem();
				}
				break;
				case 5:
					enterOuterAlt(_localctx, 5);
				{
					setState(170);
					structAccess();
				}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignRhsContext extends ParserRuleContext {

		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}

		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class, i);
		}

		public ArrayLiterContext arrayLiter() {
			return getRuleContext(ArrayLiterContext.class, 0);
		}

		public TerminalNode NEWPAIR() {
			return getToken(WaccParser.NEWPAIR, 0);
		}

		public TerminalNode L_PAREN() {
			return getToken(WaccParser.L_PAREN, 0);
		}

		public TerminalNode COMMA() {
			return getToken(WaccParser.COMMA, 0);
		}

		public TerminalNode R_PAREN() {
			return getToken(WaccParser.R_PAREN, 0);
		}

		public PairElemContext pairElem() {
			return getRuleContext(PairElemContext.class, 0);
		}

		public TerminalNode CALL() {
			return getToken(WaccParser.CALL, 0);
		}

		public IdentContext ident() {
			return getRuleContext(IdentContext.class, 0);
		}

		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class, 0);
		}

		public StructAssignContext structAssign() {
			return getRuleContext(StructAssignContext.class, 0);
		}

		public AssignRhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_assignRhs;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof WaccParserVisitor) {
				return ((WaccParserVisitor<? extends T>) visitor).visitAssignRhs(this);
			} else {
				return visitor.visitChildren(this);
			}
		}
	}
